Fixed Alignment of Footer Section

--- a/css/footer.css
+++ b/css/footer.css
@@ -24,7 +24,8 @@ footer {
 .footer-wrap {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    margin-left: 5em;
 }
 
 .footer-wrap h3 {
@@ -90,7 +91,7 @@ footer {
    .footer-wrap {
        display: flex;
        flex-flow: row wrap;
-       width: 65%;
+       width: 100%;
        justify-content: space-between;
        height: 14em;
    }
@@ -110,7 +111,7 @@ footer {
        color: #354463;
        font-size: 2em;
        width: 20%;
-       left: -2.5em;
+       left: -2.2em;
        top: 0.1em;
        order: 4;
    }
