--- a/css/index.css
+++ b/css/index.css
@@ -2056,7 +2056,6 @@
             border: none;
             border-radius: 5em;
             position: relative;
-            left: -1em;
         }
    
         .section7 ::placeholder {
